--- a/prepare/front/.eslintrc
+++ b/prepare/front/.eslintrc
@@ -20,5 +20,23 @@
     "plugins": [
         "import",
         "react-hooks"
-    ]
+    ],
+    "rules": {
+        "indent": [
+            "error",
+            4
+        ],
+        "linebreak-style": [
+            "error",
+            "windows"
+        ],
+        "quotes": [
+            "error",
+            "double"
+        ],
+        "semi": [
+            "error",
+            "always"
+        ]
+    }
 }
